* [POSSIBLE BREAKAGE] Determine credit cards via functions [bpollack] #2983
* Drop support for Laser cards [bpollack] #2983
* Improve Maestro card detection [bpollack] #2983
* Add ROU alpha3 code for Romania [dtykocki] #2989
* [POSSIBLE BREAKAGE] Drop support for Solo and Switch cards [bpollack] #2991
* Add support for Carnet cards [bpollack] #2992

== Version 1.83.0 (August 30, 2018)
* CT Payment: Update How Address is Passed [nfarve] #2960
* Adyen: Add RecurringProcessingModel [nfarve] #2951
* Optimal Payments: update country list [bpollack] #2961
* Ebanx: update sandbox and production URLs [vnbrs] #2949
* Ebanx: support additional countries [vnbrs] #2950
* Gateway generator: fix a typo that would cause the script to crash [bpollack] #2962
* Clearhaus: use $0 for verify transactions [bpollack] #2964
* Global Collect: properly handle partial captures [bpollack] #2967
* Braintree: Add support for GooglePay [dtykocki] [#2966]
* Adyen: allow overriding card brands [bpollack] #2968
* Adyen: allow custom routing [bpollack] #2969
* First Pay: Adds scrubbing [deedeelavinder] #2972
* Adyen: Add support for GooglePay [dtykocki] #2971

== Version 1.82.0 (August 13, 2018)
* FirstData: add support for WalletProviderID in v27 gateway [bpollack] #2946
* BlueSnap: Handle 403 responses [curiousepic] #2948
* BlueSnap: Add StoreCard Field [nfarve] #2953
* Worldpay: support installments [bpollack] #2957
* Paymentez: support partial refunds [bpollack] #2959
* Payflow: allow support for partial captures [pi3r] #2952

== Version 1.81.0 (July 30, 2018)
* GlobalCollect: Don't overwrite contactDetails [curiousepic] #2915
* Pin Payments: Pass reference for statement desc [curiousepic] #2919
* FirstData: introduce v27 gateway [shasum] #2912
* Stripe: Fix contactless magstripe support [abhiin1947] #2917
* ANET: Expose full response code [curiousepic] #2924
* Global Collect: Fix customer data field structure [curiousepic] #2929