@@ -12,6 +12,7 @@
 * Add ROU alpha3 code for Romania [dtykocki] #2989
 * [POSSIBLE BREAKAGE] Drop support for Solo and Switch cards [bpollack] #2991
 * Add support for Carnet cards [bpollack] #2992
+* Stripe: support a reason for voiding a transaction [whitby3001] #2378
 
 == Version 1.83.0 (August 30, 2018)
 * CT Payment: Update How Address is Passed [nfarve] #2960
